--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -5,7 +5,7 @@ ext {
         sleepycat_je: 'com.sleepycat:je:7.0.6',
         commons_cli: 'commons-cli:commons-cli:1.3.1',
         jline: 'org.jline:jline:3.2.0',
-        beanshell: 'org.beanshell:bsh:2.0b5',
+        beanshell: 'org.apache-extras.beanshell:bsh:2.0b6',
         javatuples: 'org.javatuples:javatuples:1.2',
         javassist: 'org.javassist:javassist:3.21.0-GA',
         osgi_core: 'org.osgi:org.osgi.core:6.0.0',
