--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -1,4 +1,5 @@
 ext {
+    bcVersion = '2.73.2'
     libraries = [
         jdom: 'org.jdom:jdom2:2.0.6.1',
         jdbm: 'jdbm:jdbm:1.0',
@@ -15,8 +16,8 @@ ext {
         xmlunit: 'xmlunit:xmlunit:1.6',
         junit: 'org.junit.jupiter:junit-jupiter:5.7.1',
         bouncycastle: [
-            'org.bouncycastle:bcprov-jdk15on:1.70',
-            'org.bouncycastle:bcpg-jdk15on:1.70'
+            "org.bouncycastle:bcprov-lts8on:${bcVersion}",
+            "org.bouncycastle:bcpg-lts8on:${bcVersion}"
         ],
         hamcrest: 'org.hamcrest:hamcrest:2.2',
         sshd: 'org.apache.sshd:sshd-core:2.9.2',
